--- a/sheet/webapp_style.css
+++ b/sheet/webapp_style.css
@@ -57,6 +57,7 @@
 
 .container {
   margin: 0px auto;
+  background-color: #f7f6f7;
 }
 
 .banner {
@@ -102,4 +103,43 @@
 
 body {
   margin: 0 auto;
+}
+
+.room-dimensions-card {
+  width: 344px;
+  height: 243px;
+  background-color: #f9d4d4;
+  border-radius: 12px;
+  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  border: 1px solid;
+}
+
+.room-dimensions-card:hover {
+  transform: scale(1.01);
+}
+
+.h2 {
+  font-family: "Roboto";
+  font-size: 24px;
+  font-weight: bold;
+  padding: 0px 0px 0px 15px;
+  margin-bottom: 10px;
+}
+
+.controls-alignment {
+  display: flex;
+  flex-direction: column;
+}
+
+.control-padding {
+  padding: 15px 0px 0px 15px;
+}
+
+.question-mark {
+  width: 25px;
+  margin: 25px 0px 0px 30px;
+}
+
+.controls-plots-area {
+  margin: 0px 15px 0px 15px;
 }
