--- a/sheet/webapp_style.css
+++ b/sheet/webapp_style.css
@@ -39,7 +39,7 @@
 }
 
 #progress-bar {
-  width: 50%;
+  width: 157px;
   background-color: grey;
   color: white;
   text-align: center;
@@ -47,13 +47,14 @@
 
 #the-bar {
   width: 1%;
-  background-color: blue;
+  background-color: #f1aead;
   height: 30px;
 }
 
 .chart {
-  width: 50%;
+  width: 40%;
   margin: 0 10px 0 10px;
+  /* border: 1px solid black; */
 }
 
 .container {
@@ -65,7 +66,7 @@
   height: 406px;
   background-image: linear-gradient(#ffffff, #f1aead);
   position: relative;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  box-shadow: var(--box-shadow);
 }
 
 .banner-top {
@@ -112,7 +113,7 @@ body {
   height: fit-content;
   background-color: #f9d4d4;
   border-radius: 12px;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  box-shadow: var(--box-shadow);
   border: 1px solid;
   margin: 10px 10px 0px 0px;
   transition-duration: 0.2s;
@@ -129,7 +130,7 @@ body {
   margin: 10px 0 10px 0;
   background-color: #f9d4d4;
   border-radius: 12px;
-  box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px, rgba(0, 0, 0, 0.23) 0px 6px 6px;
+  box-shadow: var(--box-shadow);
   border: 1px solid;
   transition-duration: 0.2s;
 }
@@ -243,13 +244,22 @@ a:hover::before {
 }
 
 .output-message {
-  /* border: solid 6px #087e8b; */
-  width: 400px;
+  border: 7px solid #087e8b;
+  width: 700px;
+  height: 100px;
   padding: 5px 5px 5px 5px;
   font-size: 23px;
   font-weight: bold;
+  margin: 0 0 0 0;
+}
+
+.room-air-illustration {
+  border: 1px solid black;
   border-radius: 12px;
-  margin-top: 50px;
-  /* background-color: #087e8b; */
-  /* color: white; */
+  box-shadow: var(--box-shadow);
+}
+
+:root {
+  --box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
+    rgba(0, 0, 0, 0.23) 0px 6px 6px;
 }
