--- a/sheet/webapp_style.css
+++ b/sheet/webapp_style.css
@@ -64,7 +64,7 @@
   flex-basis: 30%;
 }
 
-.progress-bar {
+.progress-bar-local {
   width: 157px;
   background-color: grey;
   color: white;
@@ -83,21 +83,24 @@
   /* border: 1px solid black; */
 }
 
-.container {
+.container-local {
   margin: 0px auto;
   background-color: #f7f6f7;
 }
 
 .banner {
-  height: 406px;
+  height: fit-content;
   background-image: linear-gradient(#ffffff, #f1aead);
   position: relative;
   box-shadow: var(--box-shadow);
+  padding-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .banner-top {
   display: flex;
   margin-top: 10px;
+  margin-bottom: 10px;
   justify-content: space-between;
 }
 
@@ -120,6 +123,7 @@
   display: flex;
   flex-direction: column;
   width: 50%;
+  padding-right: 40px;
   margin-left: 15px;
 }
 
@@ -128,11 +132,17 @@
   justify-content: space-between;
 }
 
-.virus-illustration {
+.embedded-video {
   /* float: right;
   position: absolute;
   top: 22;
   right: 30; */
+  /* height: 100%;
+  width: */
+  /* max-width: 480px;
+  max-height: 315px; */
+  display: flex;
+  justify-content: center;
 }
 
 body {
@@ -188,7 +198,7 @@ body {
   transform: scale(1.01);
 } */
 
-.h2 {
+.h2-local {
   font-family: "Roboto";
   font-size: 24px;
   font-weight: bold;
@@ -197,11 +207,11 @@ body {
   margin-top: 0px;
 }
 
-.h3 {
+/* .h3-local {
   font-family: "Roboto";
   font-size: 19px;
   font-weight: bold;
-}
+} */
 
 .controls-alignment {
   display: flex;
@@ -301,6 +311,8 @@ a:hover::before {
   --box-shadow: rgba(0, 0, 0, 0.19) 0px 10px 20px,
     rgba(0, 0, 0, 0.23) 0px 6px 6px;
   --border-radius: 12px;
+  --stop-button-color: #c81d25;
+  --stop-button-width: 80px;
 }
 
 .card-headings {
