--- a/sheet/webapp_style.css
+++ b/sheet/webapp_style.css
@@ -102,6 +102,7 @@
   margin-top: 10px;
   margin-bottom: 10px;
   justify-content: space-between;
+  flex-wrap: wrap;
 }
 
 .title-logos {
@@ -123,7 +124,6 @@
   display: flex;
   flex-direction: column;
   width: 50%;
-  padding-right: 40px;
   margin-left: 15px;
 }
 
@@ -147,10 +147,11 @@
 
 body {
   margin: 0 auto;
+  overflow-x: hidden;
 }
 
 .controls-card {
-  width: 455px;
+  width: 540px;
   /* height: fit-content; */
   background-image: linear-gradient(#ffffff, #f1aead);
   border-radius: 12px;
@@ -373,4 +374,5 @@ a:hover::before {
 
 * {
   box-sizing: border-box;
+  /* border: 1px solid red !important; */
 }
