--- a/sheet/hovertext_style.css
+++ b/sheet/hovertext_style.css
@@ -1,6 +1,7 @@
 .hovertext {
   position: relative;
   margin-top: 6px;
+  /* display: block; */
   /* border-bottom: 1px dotted black; */
 }
 
@@ -11,10 +12,17 @@
   width: max-content;
   background-color: black;
   color: #fff;
-  text-align: center;
+  /* text-align: center; */
   border-radius: 5px;
   padding: 5px 5px;
   transition: opacity 1s ease-in-out;
+  white-space: normal;
+  height: auto;
+  width: 300px;
+  font-size: 14px;
+  padding: 15px;
+  z-index: 100000;
+  /* word-wrap: break-word; */
 
   position: absolute;
   z-index: 1;
