--- a/sheet/webapp_style.css
+++ b/sheet/webapp_style.css
@@ -98,6 +98,7 @@
   margin-bottom: 20px;
   border-bottom: 1px solid black;
   padding-bottom: 10px;
+  border-radius: 12px;
 }
 
 .banner-top {
@@ -114,13 +115,13 @@
 }
 
 .description {
-  font-size: 16px;
-  font-family: "Roboto", sans-serif;
+  font-size: calc(0.7em + 0.3vw);
+  font-family: sans-serif;
 }
 
 .disclaimer {
   font-size: 13px;
-  font-family: "Roboto", sans-serif;
+  font-family: sans-serif;
 }
 
 .banner-text {
@@ -205,7 +206,7 @@ body {
 } */
 
 .h2-local {
-  font-family: "Roboto";
+  font-family: sans-serif;
   font-size: 24px;
   /* font-weight: bold; */
   padding: 0px 0px 0px 0px;
@@ -243,7 +244,7 @@ body {
   border: solid 2px #087e8b;
   background-color: white;
   border-radius: 12px;
-  font: 16px Roboto;
+  font: 16px sans-serif;
   color: #087e8b;
   padding: 0px 10px 0 10px;
   transition: 0.2s;
@@ -462,17 +463,12 @@ iframe {
   margin-right: -13px;
 }
 
-span[hover-title]:hover::after {
-  content: attr(hover-title);
-  color: green
-  font-size: 10px;
-  position: absolute;
-  top: -100%;
-  left: 0;
+.dropdown-width {
+  width: 70%;
 }
 
 * {
   box-sizing: border-box;
-  font-family: Roboto !important;
+  font-family: sans-serif !important;
   /* border: 1px solid red !important; */
 }
