--- a/sheet/archive/webapp_style.css
+++ b/sheet/archive/webapp_style.css
@@ -115,24 +115,28 @@
 }
 
 .description {
-  font-size: calc(0.7em + 0.6vw);
+  font-size: calc(0.7em + 0.3vw);
   font-family: sans-serif;
-  text-align: justify;
+}
+
+.disclaimer {
+  font-size: 13px;
+  font-family: sans-serif;
 }
 
 .banner-text {
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   /* width: 50%; */
   padding-right: 10px;
+  text-align: justify;
   /* margin-left: 15px; */
 }
 
 .banner-text-and-video {
-  /* display: flex; */
-  /* justify-content: space-between; */
+  display: flex;
+  justify-content: space-between;
   margin: 0 !important;
-  padding: 0 10px 0 10px;
 }
 
 .embedded-video {
@@ -462,17 +466,4 @@ iframe {
   box-sizing: border-box;
   font-family: sans-serif !important;
   /* border: 1px solid red !important; */
-}
-
-.disclaimer {
-  margin-top: 15px;
-  width: fit-content;
-  background-color: #f1aead;
-  border-radius: 12px;
-  color: black;
-  font-size: 13px;
-  font-family: sans-serif;
-  text-align: justify;
-  padding: 6px;
-  font-style: italic;
 }
